User can specific machine size. STIR built with multi-core. Closes #4

--- a/var_values.tfvars.example
+++ b/var_values.tfvars.example
@@ -5,3 +5,4 @@ tenant_id 		    = "YOUR_TENANT_ID_HERE"
 location 		    = "westeurope"
 vm_username 		= "stiruser"
 vm_password 		= "stir%1"
+vm_size             = "Standard_D2_v2"
